# Mamogram_Classification

./: .gitignore  README.md
backend/: README.md  main.py  pip_list.txt  pyproject.toml  requirements.txt
backend/ml/: explainability.py  hybrid_model.py  image_processor.py  preprocessing.py  train.py  train_vision.py  vision_model.py
backend/models/: ann_model.h5  gradient_boosting.joblib  last_extracted_features.csv  logistic_regression.joblib  random_forest.joblib  scaler.joblib  svm.joblib
backend/reports/: pdf_generator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: HospitalLocator.jsx  ImageUpload.jsx  ReportForm.jsx  ResultsView.jsx
frontend/src/utils/: api.js
