[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamogram-backend"
version = "0.1.0"
description = "Backend for Mamogram Classification (FastAPI + ML)."
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.0",
  "python-multipart==0.0.9",
  "pandas==2.2.0",
  "numpy==1.26.4",
  "openpyxl==3.1.2",
  "scikit-learn==1.4.0",
  "tensorflow==2.16.1",
  "xgboost==2.0.3",
  "lightgbm==4.3.0",
  "lime==0.2.0.1",
  "shap==0.45.0",
  "opencv-python-headless==4.9.0.80",
  "Pillow==10.2.0",
  "reportlab==4.1.0",
  "joblib==1.3.2",
  "requests>=2.32.3",
  "urllib3>=2.0.0,<3.0.0",
  "charset-normalizer>=3.0.0,<4.0.0",
  "httpx==0.27.0",
  "matplotlib==3.8.3",
  "starlette==0.38.2",
]

[tool.uv]
venv = "../.venv"
python = "python3"
requirements = "requirements.txt"
